--- a/components/table/styles/Table.module.scss
+++ b/components/table/styles/Table.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   width: 80%;
-  height: 80%;
   padding-left: 2rem;
   align-items: center;
   button{
