--- a/globalStyle/globals.css
+++ b/globalStyle/globals.css
@@ -23,7 +23,7 @@ body {
     var(--oxford-blue-2) 0%,
     var(--ua-blue) 100%
   );
-  height: 100%;
+  height: inherit;
 }
 a {
   color: inherit;
